# Nexus-Programming-Language

./: .gitignore  LICENSE  README.md  run.sh
Compilers/NexusCompiler/src/: main.cpp
Compilers/NexusCompiler/src/AST/: AST.h  ExprVisitor.h
Compilers/NexusCompiler/src/CodeGen/: CodeGen.cpp  CodeGen.h  TypeResolver.h  VarInfo.h
Compilers/NexusCompiler/src/CodeGen/Emitters/: ArrayEmitter.cpp  ArrayEmitter.h  BuiltinEmitter.cpp  BuiltinEmitter.h  StringEmitter.cpp  StringEmitter.h
Compilers/NexusCompiler/src/CodeGen/Manager/: ArithmeticManager.h  ScopeManager.cpp  ScopeManager.h
Compilers/NexusCompiler/src/FileReader/: FileReader.cpp
Compilers/NexusCompiler/src/Lexer/: Lexer.cpp  Lexer.h
Compilers/NexusCompiler/src/Parser/: Parser.cpp  Parser.h
Compilers/NexusCompiler/src/Token/: TokenTable.cpp  TokenType.h
Compilers/NexusCompiler/src/TypeChecker/: TypeChecker.cpp  TypeChecker.h
Compilers/NexusCompiler[LEGACY]/: CMakeLists.txt
Compilers/NexusCompiler[LEGACY]/src/CodeGen/: CodeGen.cpp  CodeGen.h  CodeGenUtils.h  RTDecl.cpp
Compilers/NexusCompiler[LEGACY]/src/CodeGen/Manager/: ArithmeticManager.cpp  ScopeManager.h
Compilers/NexusCompiler[LEGACY]/src/Lexer/: Lexer.h
Compilers/NexusCompiler[LEGACY]/src/Parser/: Parser.cpp
Compilers/NexusCompiler[LEGACY]/src/Token/: TokenTable.cpp
Compilers/NexusCompiler[LEGACY]/src/TypeChecker/: TypeChecker.cpp
Compilers/OpactCompiler/: CMakeLists.txt  run.sh
Compilers/OpactCompiler/src/: main.cpp
Compilers/OpactCompiler/src/FileReader/: FileReader.cpp  FileReader.hpp
Compilers/OpactCompiler/src/Lexer/: Lexer.cpp  Lexer.hpp
Compilers/OpactCompiler/src/Parser/: Ast.hpp
Compilers/OpactCompiler/src/Token/: TokenTable.cpp
Examples/: BankAccount.nexus  CS.nx  LinkedList.nx  Math.nx  Math.x  MineSweeper.x  Recursion.nx  main.cpp  out.ll  test.nx  test.x
Examples/Legacy/: Math.nx  MineSweeper.nx
Examples/New/: NewSyntax.nx  Test.nx  Test.x  out.ll  project.nx
Executable/: Math.x  MineSweeper.x  test.x
LSP/: package-lock.json  server.js
NexusCompiler/: 2  CMakeLists.txt  run.bat  run.sh
NexusCompiler/src/: main.cpp
NexusCompiler/src/AST/: AST.h  ExprVisitor.h
NexusCompiler/src/CodeGen/: CodeGen.cpp  CodeGen.h  CodeGenUtils.h  RTDecl.cpp  RTDecl.h  TypeResolver.cpp  TypeResolver.h  VarInfo.h
NexusCompiler/src/CodeGen/Emitters/: ArrayEmitter.cpp  BuiltinEmitter.cpp  PrintEmitter.cpp  PrintEmitter.h  StringEmitter.cpp  StringEmitter.h
NexusCompiler/src/CodeGen/Manager/: ArithmeticManager.cpp  ModuleManager.cpp  ModuleManager.h  ScopeManager.cpp  ScopeManager.h
NexusCompiler/src/Dictionary/: TokenTable.cpp  TokenType.h
NexusCompiler/src/FileReader/: FileReader.cpp  FileReader.h
NexusCompiler/src/Lexer/: Lexer.cpp  Lexer.h
NexusCompiler/src/Parser/: Parser.cpp  Parser.h
NexusCompiler/src/Parsing/: AST.h  Parser.h
NexusCompiler/src/Token/: TokenTable.cpp  TokenType.h
NexusCompiler/src/Tokenizing/: Lexer.cpp  Lexer.h  Token.cpp  Token.h  TokenTable.cpp
NexusCompiler/src/TypeChecker/: TypeChecker.cpp  TypeChecker.h
NexusCompilerV1/: CMakeLists.txt
NexusCompilerV1/src/: main.cpp
NexusCompilerV1/src/Parsing/: AST.cpp  AST.h  Parser.cpp  Parser.h
NexusCompilerV1/src/Tokenizing/: Lexer.cpp  Lexer.h  Token.h  TokenTable.cpp
NexusCompilerV2/: CMakeLists.txt  run.bat  run.sh
NexusCompilerV2/src/: main.cpp
NexusCompilerV2/src/AST/: AST.h
NexusCompilerV2/src/CodeGen/: CodeGen.h
NexusCompilerV2/src/Dictionary/: Token.cpp  TokenTable.cpp  TokenType.h
NexusCompilerV2/src/FileReader/: FileReader.cpp  FileReader.h
NexusCompilerV2/src/Lexer/: Lexer.cpp  Lexer.h
NexusCompilerV2/src/Parser/: Parser.cpp  Parser.h  ParserError.h
NexusCompiler[LEGACY]/: run.sh
NexusCompiler[LEGACY]/src/AST/: ExprVisitor.h
NexusCompiler[LEGACY]/src/CodeGen/: RTDecl.h  TypeResolver.cpp
NexusCompiler[LEGACY]/src/CodeGen/Emitters/: ArrayEmitter.cpp  BuiltinEmitter.cpp  PrintEmitter.cpp  PrintEmitter.h  StringEmitter.cpp
NexusCompiler[LEGACY]/src/FileReader/: FileReader.cpp
NexusCompiler[LEGACY]/src/Parser/: Parser.h  ParserError.h
